--- a/docker-compose-env.yml
+++ b/docker-compose-env.yml
@@ -1,5 +1,4 @@
 name: fastapi-zapatillas
-
 services:
   fastapi-zapatillas:
     build:
@@ -10,14 +9,7 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      zapatillas-db:
-        condition: service_healthy
-    environment:
-      DB_USER: pablo
-      DB_PASSWORD: 1234
-      DB_HOST: zapatillas-db
-      DB_PORT: 3306
-      DB_NAME: zapatillas-db
+      - zapatillas-db
 
   zapatillas-db:
     image: mysql
@@ -29,13 +21,3 @@ services:
       MYSQL_PASSWORD: 1234
     ports:
       - "3307:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 5s
-      retries: 10
-
-volumes:
-  mysql_data:
-
