--- a/docker-compose-mysql.yml
+++ b/docker-compose-mysql.yml
@@ -1,13 +1,13 @@
 name: fastapi-mysql
 
-services:   
-  db-mysql:  
-    image: mysql 
-    container_name: db-mysql   
-    environment:  
-      MYSQL_ROOT_PASSWORD: quevedo
-      MYSQL_DATABASE: seriesdb
-      MYSQL_USER: quevedo
+services:
+  db-mysql:
+    image: mysql
+    container_name: db-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: pablo1234
+      MYSQL_DATABASE: zapatillas-db
+      MYSQL_USER: pablo
       MYSQL_PASSWORD: 1234
-    ports:  
+    ports:
       - "3307:3306"
